examples/test/testpolicy16574.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16574
  namespace: namespace486
spec:
  podSelector:
    matchLabels:
      key30: value34
      key16: value46
      key18: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value29
          key31: value31
          key6: value21
      podSelector:
        matchLabels:
          key13: value5
          key14: value33
